--- a/src/Services/Gaming/Gaming.API/appsettings.json
+++ b/src/Services/Gaming/Gaming.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UserDbConnection": "Server=127.0.0.1;Database=users;User Id=root;Password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    },
+    "Clients": {
+      "Gaming.API": {
+        "Profile": "IdentityServerSPA"
+      }
+    }
+  }
 }
