--- a/src/Services/Gaming/Gaming.API/ClientApp/package.json
+++ b/src/Services/Gaming/Gaming.API/ClientApp/package.json
@@ -8,6 +8,7 @@
     "history": "4.10.1",
     "jquery": "^3.4.1",
     "merge": "1.2.1",
+    "oidc-client": "^1.9.0",
     "popper.js": "^1.16.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
@@ -18,7 +19,8 @@
     "reactstrap": "8.1.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "svgo": "1.3.0"
+    "svgo": "1.3.0",
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "@types/history": "4.7.3",
@@ -38,7 +40,8 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "nan": "^2.14.1",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "ajv": "^6.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
