--- a/src/Services/Gaming/Gaming.API/Gaming.API.csproj
+++ b/src/Services/Gaming/Gaming.API/Gaming.API.csproj
@@ -11,8 +11,21 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
+    <!--<PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.21" />-->
+    <PackageReference Include="Polly" Version="7.2.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,9 +36,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Utils\bdbwu4lc.snu~" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Domain\Lobby\Exception\" />
     <Folder Include="ClientApp\" />
     <Folder Include="Domain\Trpg\" />
+    <Folder Include="Infrastructure\Data\FiveUsers\Migrations\" />
+    <Folder Include="Infrastructure\Models\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
